# JCQ-judge

./: README.md  common.py  gen_api_answer.py  gen_api_judgement.py  gen_model_answer.py  pyproject.toml  requirements.txt  show_result.py
data/: judge_prompt.txt  test.jsonl
data/judgements/gpt-4o-2024-08-06/: Llama-3.1-Swallow-8B-Instruct-v0.1.jsonl  Llama-3.1-Swallow-8B-Instruct-v0.3-dpo-dat-1.jsonl  Llama-3.1-Swallow-8B-Instruct-v0.3-dpo-dat-2.jsonl  Llama-3.1-Swallow-8B-Instruct-v0.3-grpo-dat.jsonl  Llama-3.1-Swallow-8B-Instruct-v0.3-sft-dat.jsonl  Llama-3.1-Swallow-8B-Instruct-v0.3.jsonl  Qwen2.5-7B-Instruct-dpo-dat-1.jsonl  Qwen2.5-7B-Instruct-dpo-dat-2.jsonl  Qwen2.5-7B-Instruct-grpo-dat.jsonl  Qwen2.5-7B-Instruct-sft-dat.jsonl  Qwen2.5-7B-Instruct.jsonl  calm3-22b-chat.jsonl  claude-3-5-sonnet-20241022.jsonl  gpt-4o-2024-08-06.jsonl  gpt-5-mini-2025-08-07-medium.jsonl  gpt-5-mini-2025-08-07-minimal.jsonl  llm-jp-3-13b-instruct.jsonl  llm-jp-3-7.2b-instruct2-dpo-dat-1.jsonl  llm-jp-3-7.2b-instruct2-dpo-dat-2.jsonl  llm-jp-3-7.2b-instruct2-grpo-dat.jsonl  llm-jp-3-7.2b-instruct2-sft-dat.jsonl  llm-jp-3-7.2b-instruct2.jsonl
data/model_answer/: claude-3-haiku-20240307.jsonl  gpt-4o-mini.jsonl
data/model_judgement/: gpt-4o-mini.jsonl
src/: gen_api_answers.py  gen_api_judgements.py  gen_local_answers.py  show_results.py  utils.py
